k8s/backend/httproute-direct.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-direct
  namespace: backend
spec:
  parentRefs:
    - name: main-line-gateway
      namespace: default
      sectionName: backend-direct
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 3000
